--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -1,6 +1,420 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#file paths to load\n",
+    "school_data_to_load=\"Resources/schools.csv\"\n",
+    "student_data_to_load=\"Resources/students.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#read school and student data files and store into dataframes\n",
+    "school_data_df=pd.read_csv(school_data_to_load)\n",
+    "student_data_df=pd.read_csv(student_data_to_load)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Student ID</th>\n",
+       "      <th>student_name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>school_name</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>math_score</th>\n",
+       "      <th>School ID</th>\n",
+       "      <th>type</th>\n",
+       "      <th>size</th>\n",
+       "      <th>budget</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Paul Bradley</td>\n",
+       "      <td>M</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>66</td>\n",
+       "      <td>79</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Victor Smith</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>94</td>\n",
+       "      <td>61</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Kevin Rodriguez</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>90</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Dr. Richard Scott</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>67</td>\n",
+       "      <td>58</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Bonnie Ray</td>\n",
+       "      <td>F</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>97</td>\n",
+       "      <td>84</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39165</th>\n",
+       "      <td>39165</td>\n",
+       "      <td>Donna Howard</td>\n",
+       "      <td>F</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>99</td>\n",
+       "      <td>90</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39166</th>\n",
+       "      <td>39166</td>\n",
+       "      <td>Dawn Bell</td>\n",
+       "      <td>F</td>\n",
+       "      <td>10th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>95</td>\n",
+       "      <td>70</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39167</th>\n",
+       "      <td>39167</td>\n",
+       "      <td>Rebecca Tanner</td>\n",
+       "      <td>F</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>73</td>\n",
+       "      <td>84</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39168</th>\n",
+       "      <td>39168</td>\n",
+       "      <td>Desiree Kidd</td>\n",
+       "      <td>F</td>\n",
+       "      <td>10th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>99</td>\n",
+       "      <td>90</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39169</th>\n",
+       "      <td>39169</td>\n",
+       "      <td>Carolyn Jackson</td>\n",
+       "      <td>F</td>\n",
+       "      <td>11th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>95</td>\n",
+       "      <td>75</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>39170 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Student ID       student_name gender grade         school_name  \\\n",
+       "0               0       Paul Bradley      M   9th   Huang High School   \n",
+       "1               1       Victor Smith      M  12th   Huang High School   \n",
+       "2               2    Kevin Rodriguez      M  12th   Huang High School   \n",
+       "3               3  Dr. Richard Scott      M  12th   Huang High School   \n",
+       "4               4         Bonnie Ray      F   9th   Huang High School   \n",
+       "...           ...                ...    ...   ...                 ...   \n",
+       "39165       39165       Donna Howard      F  12th  Thomas High School   \n",
+       "39166       39166          Dawn Bell      F  10th  Thomas High School   \n",
+       "39167       39167     Rebecca Tanner      F   9th  Thomas High School   \n",
+       "39168       39168       Desiree Kidd      F  10th  Thomas High School   \n",
+       "39169       39169    Carolyn Jackson      F  11th  Thomas High School   \n",
+       "\n",
+       "       reading_score  math_score  School ID      type  size   budget  \n",
+       "0                 66          79          0  District  2917  1910635  \n",
+       "1                 94          61          0  District  2917  1910635  \n",
+       "2                 90          60          0  District  2917  1910635  \n",
+       "3                 67          58          0  District  2917  1910635  \n",
+       "4                 97          84          0  District  2917  1910635  \n",
+       "...              ...         ...        ...       ...   ...      ...  \n",
+       "39165             99          90         14   Charter  1635  1043130  \n",
+       "39166             95          70         14   Charter  1635  1043130  \n",
+       "39167             73          84         14   Charter  1635  1043130  \n",
+       "39168             99          90         14   Charter  1635  1043130  \n",
+       "39169             95          75         14   Charter  1635  1043130  \n",
+       "\n",
+       "[39170 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#merge the data into a single dataframe\n",
+    "school_data_complete_df = pd.merge(student_data_df,school_data_df, how=\"left\", on=[\"school_name\",\"school_name\"])\n",
+    "school_data_complete_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Schools</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15</td>\n",
+       "      <td>39,170</td>\n",
+       "      <td>$24,649,428.00</td>\n",
+       "      <td>78.99</td>\n",
+       "      <td>81.88</td>\n",
+       "      <td>74.98%</td>\n",
+       "      <td>85.81%</td>\n",
+       "      <td>65.17%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Total Schools Total Students    Total Budget Average Math Score  \\\n",
+       "0             15         39,170  $24,649,428.00              78.99   \n",
+       "\n",
+       "  Average Reading Score % Passing Math % Passing Reading Overall Passing  \n",
+       "0                 81.88         74.98%            85.81%          65.17%  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#District Summary\n",
+    "#Find the total number of schools\n",
+    "total_schools=len(school_data_complete_df[\"school_name\"].value_counts())\n",
+    "total_schools\n",
+    "#Find the total number of students\n",
+    "total_students=len(school_data_complete_df[\"Student ID\"].value_counts())\n",
+    "total_students\n",
+    "#Find total budget\n",
+    "total_budget=school_data_df[\"budget\"].sum()\n",
+    "total_budget\n",
+    "#Average Math Score\n",
+    "average_math_score=student_data_df[\"math_score\"].mean()\n",
+    "average_math_score\n",
+    "#Average Reading Score\n",
+    "average_reading_score=student_data_df[\"reading_score\"].mean()\n",
+    "average_reading_score\n",
+    "#Percentage of Students with a passing math score\n",
+    "passing_math_score_df=student_data_df.loc[(student_data_df[\"math_score\"]>=70)]\n",
+    "percent_passed_math=(len(passing_math_score_df[\"Student ID\"].value_counts())/len(student_data_df[\"Student ID\"].value_counts()))*100\n",
+    "percent_passed_math\n",
+    "#Percentage of Students with a passing english score\n",
+    "passing_reading_score_df=student_data_df.loc[(student_data_df[\"reading_score\"]>=70)]\n",
+    "percent_passed_reading=(len(passing_reading_score_df[\"Student ID\"].value_counts())/len(student_data_df[\"Student ID\"].value_counts()))*100\n",
+    "percent_passed_reading\n",
+    "#Find percentage of students who passed overall, which means they passed the math and reading parts\n",
+    "passing_overall_df=student_data_df.loc[(student_data_df[\"reading_score\"]>=70)&(student_data_df[\"math_score\"]>=70)]\n",
+    "percent_passed_overall=(len(passing_overall_df[\"Student ID\"].value_counts())/len(student_data_df[\"Student ID\"].value_counts()))*100\n",
+    "percent_passed_overall\n",
+    "#Create a dataframe to hold the above results\n",
+    "district_summary_df=pd.DataFrame({\n",
+    "    \"Total Schools\":[total_schools],\n",
+    "    \"Total Students\":[total_students],\n",
+    "    \"Total Budget\":[total_budget],\n",
+    "    \"Average Math Score\": [average_math_score],\n",
+    "    \"Average Reading Score\":[average_reading_score],\n",
+    "    \"% Passing Math\": [percent_passed_math],\n",
+    "    \"% Passing Reading\":[percent_passed_reading],\n",
+    "    \"Overall Passing\":[percent_passed_overall]\n",
+    "})\n",
+    "\n",
+    "district_summary_df[\"Total Students\"]=district_summary_df[\"Total Students\"].map(\"{:,}\".format)\n",
+    "district_summary_df[\"Total Budget\"]=district_summary_df[\"Total Budget\"].map(\"${:,.2f}\".format)\n",
+    "district_summary_df[\"Average Math Score\"]=district_summary_df[\"Average Math Score\"].map(\"{:.2f}\".format)\n",
+    "district_summary_df[\"Average Reading Score\"]=district_summary_df[\"Average Reading Score\"].map(\"{:.2f}\".format)\n",
+    "district_summary_df[\"% Passing Math\"]=district_summary_df[\"% Passing Math\"].map(\"{:.2f}%\".format)\n",
+    "district_summary_df[\"% Passing Reading\"]=district_summary_df[\"% Passing Reading\"].map(\"{:.2f}%\".format)\n",
+    "district_summary_df[\"Overall Passing\"]=district_summary_df[\"Overall Passing\"].map(\"{:.2f}%\".format)\n",
+    "\n",
+    "district_summary_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.1"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
