continued to develop dataframes

--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "[39170 rows x 11 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
        "0                 81.88         74.98%            85.81%          65.17%  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,6 +386,157 @@
     "district_summary_df[\"Overall Passing\"]=district_summary_df[\"Overall Passing\"].map(\"{:.2f}%\".format)\n",
     "\n",
     "district_summary_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Names</th>\n",
+       "      <th>School Types</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[Huang High School, Figueroa High School, Shel...</td>\n",
+       "      <td>0     District\n",
+       "1     District\n",
+       "2      Charter\n",
+       "3...</td>\n",
+       "      <td>0     2917\n",
+       "1     2949\n",
+       "2     1761\n",
+       "3     4635\n",
+       "4 ...</td>\n",
+       "      <td>0     1910635\n",
+       "1     1884411\n",
+       "2     1056600\n",
+       "3   ...</td>\n",
+       "      <td>0     655.0\n",
+       "1     639.0\n",
+       "2     600.0\n",
+       "3     652....</td>\n",
+       "      <td>school_name\n",
+       "Bailey High School       77.048432...</td>\n",
+       "      <td>school_name\n",
+       "Bailey High School       81.033963...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        School Names  \\\n",
+       "0  [Huang High School, Figueroa High School, Shel...   \n",
+       "\n",
+       "                                        School Types  \\\n",
+       "0  0     District\n",
+       "1     District\n",
+       "2      Charter\n",
+       "3...   \n",
+       "\n",
+       "                                      Total Students  \\\n",
+       "0  0     2917\n",
+       "1     2949\n",
+       "2     1761\n",
+       "3     4635\n",
+       "4 ...   \n",
+       "\n",
+       "                                 Total School Budget  \\\n",
+       "0  0     1910635\n",
+       "1     1884411\n",
+       "2     1056600\n",
+       "3   ...   \n",
+       "\n",
+       "                                  Per Student Budget  \\\n",
+       "0  0     655.0\n",
+       "1     639.0\n",
+       "2     600.0\n",
+       "3     652....   \n",
+       "\n",
+       "                                  Average Math Score  \\\n",
+       "0  school_name\n",
+       "Bailey High School       77.048432...   \n",
+       "\n",
+       "                               Average Reading Score  \n",
+       "0  school_name\n",
+       "Bailey High School       81.033963...  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Creating the school summary table\n",
+    "#School Names\n",
+    "district_school_names=school_data_df[\"school_name\"].unique()\n",
+    "district_school_names\n",
+    "#Type of School\n",
+    "school_type=school_data_df[\"type\"]\n",
+    "#Total Students\n",
+    "total_students=school_data_df[\"size\"]\n",
+    "#Total School Budget\n",
+    "school_budgets=school_data_df[\"budget\"]\n",
+    "#Per Student Budget\n",
+    "per_student_budget=(school_data_df[\"budget\"]/school_data_df[\"size\"])\n",
+    "#Average Math Score of each school\n",
+    "info_by_school_df=student_data_df.groupby([\"school_name\"])\n",
+    "average_math_by_school=info_by_school_df[\"math_score\"].mean()\n",
+    "average_math_by_school\n",
+    "#Average Reading Score of each school\n",
+    "info_by_school_df=student_data_df.groupby([\"school_name\"])\n",
+    "average_reading_by_school=info_by_school_df[\"reading_score\"].mean()\n",
+    "average_reading_by_school\n",
+    "\n",
+    "\n",
+    "#Create the data frame to show school summary\n",
+    "school_summary_df=pd.DataFrame({\n",
+    "    \"School Names\":[district_school_names],\n",
+    "    \"School Types\":[school_type],\n",
+    "    \"Total Students\":[total_students],\n",
+    "    \"Total School Budget\":[school_budgets],\n",
+    "    \"Per Student Budget\":[per_student_budget],\n",
+    "    \"Average Math Score\":[average_math_by_school],\n",
+    "    \"Average Reading Score\":[average_reading_by_school],\n",
+    "    })\n",
+    "       \n",
+    "\n",
+    "school_summary_df\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
