--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -414,123 +414,325 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>School Names</th>\n",
        "      <th>School Types</th>\n",
        "      <th>Total Students</th>\n",
        "      <th>Total School Budget</th>\n",
        "      <th>Per Student Budget</th>\n",
        "      <th>Average Math Score</th>\n",
        "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Passing Overall</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>[Huang High School, Figueroa High School, Shel...</td>\n",
-       "      <td>0     District\n",
-       "1     District\n",
-       "2      Charter\n",
-       "3...</td>\n",
-       "      <td>0     2917\n",
-       "1     2949\n",
-       "2     1761\n",
-       "3     4635\n",
-       "4 ...</td>\n",
-       "      <td>0     1910635\n",
-       "1     1884411\n",
-       "2     1056600\n",
-       "3   ...</td>\n",
-       "      <td>0     655.0\n",
-       "1     639.0\n",
-       "2     600.0\n",
-       "3     652....</td>\n",
-       "      <td>school_name\n",
-       "Bailey High School       77.048432...</td>\n",
-       "      <td>school_name\n",
-       "Bailey High School       81.033963...</td>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4,976</td>\n",
+       "      <td>$3,124,928.00</td>\n",
+       "      <td>628.0</td>\n",
+       "      <td>77.05</td>\n",
+       "      <td>81.03</td>\n",
+       "      <td>66.68%</td>\n",
+       "      <td>81.93%</td>\n",
+       "      <td>54.64%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1,858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>582.0</td>\n",
+       "      <td>83.06</td>\n",
+       "      <td>83.98</td>\n",
+       "      <td>94.13%</td>\n",
+       "      <td>97.04%</td>\n",
+       "      <td>91.33%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2,949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>639.0</td>\n",
+       "      <td>76.71</td>\n",
+       "      <td>81.16</td>\n",
+       "      <td>65.99%</td>\n",
+       "      <td>80.74%</td>\n",
+       "      <td>53.20%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2,739</td>\n",
+       "      <td>$1,763,916.00</td>\n",
+       "      <td>644.0</td>\n",
+       "      <td>77.10</td>\n",
+       "      <td>80.75</td>\n",
+       "      <td>68.31%</td>\n",
+       "      <td>79.30%</td>\n",
+       "      <td>54.29%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1,468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>625.0</td>\n",
+       "      <td>83.35</td>\n",
+       "      <td>83.82</td>\n",
+       "      <td>93.39%</td>\n",
+       "      <td>97.14%</td>\n",
+       "      <td>90.60%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4,635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>652.0</td>\n",
+       "      <td>77.29</td>\n",
+       "      <td>80.93</td>\n",
+       "      <td>66.75%</td>\n",
+       "      <td>80.86%</td>\n",
+       "      <td>53.53%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>427</td>\n",
+       "      <td>$248,087.00</td>\n",
+       "      <td>581.0</td>\n",
+       "      <td>83.80</td>\n",
+       "      <td>83.81</td>\n",
+       "      <td>92.51%</td>\n",
+       "      <td>96.25%</td>\n",
+       "      <td>89.23%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2,917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>655.0</td>\n",
+       "      <td>76.63</td>\n",
+       "      <td>81.18</td>\n",
+       "      <td>65.68%</td>\n",
+       "      <td>81.32%</td>\n",
+       "      <td>53.51%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4,761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>650.0</td>\n",
+       "      <td>77.07</td>\n",
+       "      <td>80.97</td>\n",
+       "      <td>66.06%</td>\n",
+       "      <td>81.22%</td>\n",
+       "      <td>53.54%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>609.0</td>\n",
+       "      <td>83.84</td>\n",
+       "      <td>84.04</td>\n",
+       "      <td>94.59%</td>\n",
+       "      <td>95.95%</td>\n",
+       "      <td>90.54%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3,999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>637.0</td>\n",
+       "      <td>76.84</td>\n",
+       "      <td>80.74</td>\n",
+       "      <td>66.37%</td>\n",
+       "      <td>80.22%</td>\n",
+       "      <td>52.99%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1,761</td>\n",
+       "      <td>$1,056,600.00</td>\n",
+       "      <td>600.0</td>\n",
+       "      <td>83.36</td>\n",
+       "      <td>83.73</td>\n",
+       "      <td>93.87%</td>\n",
+       "      <td>95.85%</td>\n",
+       "      <td>89.89%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1,635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>638.0</td>\n",
+       "      <td>83.42</td>\n",
+       "      <td>83.85</td>\n",
+       "      <td>93.27%</td>\n",
+       "      <td>97.31%</td>\n",
+       "      <td>90.95%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2,283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>578.0</td>\n",
+       "      <td>83.27</td>\n",
+       "      <td>83.99</td>\n",
+       "      <td>93.87%</td>\n",
+       "      <td>96.54%</td>\n",
+       "      <td>90.58%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1,800</td>\n",
+       "      <td>$1,049,400.00</td>\n",
+       "      <td>583.0</td>\n",
+       "      <td>83.68</td>\n",
+       "      <td>83.95</td>\n",
+       "      <td>93.33%</td>\n",
+       "      <td>96.61%</td>\n",
+       "      <td>90.33%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                        School Names  \\\n",
-       "0  [Huang High School, Figueroa High School, Shel...   \n",
+       "                      School Types Total Students Total School Budget  \\\n",
+       "Bailey High School        District          4,976       $3,124,928.00   \n",
+       "Cabrera High School        Charter          1,858       $1,081,356.00   \n",
+       "Figueroa High School      District          2,949       $1,884,411.00   \n",
+       "Ford High School          District          2,739       $1,763,916.00   \n",
+       "Griffin High School        Charter          1,468         $917,500.00   \n",
+       "Hernandez High School     District          4,635       $3,022,020.00   \n",
+       "Holden High School         Charter            427         $248,087.00   \n",
+       "Huang High School         District          2,917       $1,910,635.00   \n",
+       "Johnson High School       District          4,761       $3,094,650.00   \n",
+       "Pena High School           Charter            962         $585,858.00   \n",
+       "Rodriguez High School     District          3,999       $2,547,363.00   \n",
+       "Shelton High School        Charter          1,761       $1,056,600.00   \n",
+       "Thomas High School         Charter          1,635       $1,043,130.00   \n",
+       "Wilson High School         Charter          2,283       $1,319,574.00   \n",
+       "Wright High School         Charter          1,800       $1,049,400.00   \n",
        "\n",
-       "                                        School Types  \\\n",
-       "0  0     District\n",
-       "1     District\n",
-       "2      Charter\n",
-       "3...   \n",
+       "                       Per Student Budget Average Math Score  \\\n",
+       "Bailey High School                  628.0              77.05   \n",
+       "Cabrera High School                 582.0              83.06   \n",
+       "Figueroa High School                639.0              76.71   \n",
+       "Ford High School                    644.0              77.10   \n",
+       "Griffin High School                 625.0              83.35   \n",
+       "Hernandez High School               652.0              77.29   \n",
+       "Holden High School                  581.0              83.80   \n",
+       "Huang High School                   655.0              76.63   \n",
+       "Johnson High School                 650.0              77.07   \n",
+       "Pena High School                    609.0              83.84   \n",
+       "Rodriguez High School               637.0              76.84   \n",
+       "Shelton High School                 600.0              83.36   \n",
+       "Thomas High School                  638.0              83.42   \n",
+       "Wilson High School                  578.0              83.27   \n",
+       "Wright High School                  583.0              83.68   \n",
        "\n",
-       "                                      Total Students  \\\n",
-       "0  0     2917\n",
-       "1     2949\n",
-       "2     1761\n",
-       "3     4635\n",
-       "4 ...   \n",
+       "                      Average Reading Score % Passing Math % Passing Reading  \\\n",
+       "Bailey High School                    81.03         66.68%            81.93%   \n",
+       "Cabrera High School                   83.98         94.13%            97.04%   \n",
+       "Figueroa High School                  81.16         65.99%            80.74%   \n",
+       "Ford High School                      80.75         68.31%            79.30%   \n",
+       "Griffin High School                   83.82         93.39%            97.14%   \n",
+       "Hernandez High School                 80.93         66.75%            80.86%   \n",
+       "Holden High School                    83.81         92.51%            96.25%   \n",
+       "Huang High School                     81.18         65.68%            81.32%   \n",
+       "Johnson High School                   80.97         66.06%            81.22%   \n",
+       "Pena High School                      84.04         94.59%            95.95%   \n",
+       "Rodriguez High School                 80.74         66.37%            80.22%   \n",
+       "Shelton High School                   83.73         93.87%            95.85%   \n",
+       "Thomas High School                    83.85         93.27%            97.31%   \n",
+       "Wilson High School                    83.99         93.87%            96.54%   \n",
+       "Wright High School                    83.95         93.33%            96.61%   \n",
        "\n",
-       "                                 Total School Budget  \\\n",
-       "0  0     1910635\n",
-       "1     1884411\n",
-       "2     1056600\n",
-       "3   ...   \n",
-       "\n",
-       "                                  Per Student Budget  \\\n",
-       "0  0     655.0\n",
-       "1     639.0\n",
-       "2     600.0\n",
-       "3     652....   \n",
-       "\n",
-       "                                  Average Math Score  \\\n",
-       "0  school_name\n",
-       "Bailey High School       77.048432...   \n",
-       "\n",
-       "                               Average Reading Score  \n",
-       "0  school_name\n",
-       "Bailey High School       81.033963...  "
+       "                      % Passing Overall  \n",
+       "Bailey High School               54.64%  \n",
+       "Cabrera High School              91.33%  \n",
+       "Figueroa High School             53.20%  \n",
+       "Ford High School                 54.29%  \n",
+       "Griffin High School              90.60%  \n",
+       "Hernandez High School            53.53%  \n",
+       "Holden High School               89.23%  \n",
+       "Huang High School                53.51%  \n",
+       "Johnson High School              53.54%  \n",
+       "Pena High School                 90.54%  \n",
+       "Rodriguez High School            52.99%  \n",
+       "Shelton High School              89.89%  \n",
+       "Thomas High School               90.95%  \n",
+       "Wilson High School               90.58%  \n",
+       "Wright High School               90.33%  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Creating the school summary table\n",
-    "#School Names\n",
-    "district_school_names=school_data_df[\"school_name\"].unique()\n",
-    "district_school_names\n",
-    "#Type of School\n",
-    "school_type=school_data_df[\"type\"]\n",
-    "#Total Students\n",
-    "total_students=school_data_df[\"size\"]\n",
+    "#set the index to name and the first column to type\n",
+    "school_type=school_data_df.set_index([\"school_name\"])[\"type\"]\n",
+    "#Total Students per school \n",
+    "total_students=school_data_complete_df.groupby(\"school_name\").count()[\"Student ID\"]\n",
     "#Total School Budget\n",
-    "school_budgets=school_data_df[\"budget\"]\n",
+    "#school_budgets=school_data_df[\"budget\"]\n",
     "#Per Student Budget\n",
-    "per_student_budget=(school_data_df[\"budget\"]/school_data_df[\"size\"])\n",
+    "#per_student_budget=(school_data_df[\"budget\"]/school_data_df[\"size\"])\n",
+    "per_school_budget = school_data_complete_df.groupby(\"school_name\").mean()[\"budget\"]\n",
+    "per_student_budget = per_school_budget/total_students\n",
     "#Average Math Score of each school\n",
-    "info_by_school_df=student_data_df.groupby([\"school_name\"])\n",
-    "average_math_by_school=info_by_school_df[\"math_score\"].mean()\n",
-    "average_math_by_school\n",
+    "average_math_by_school=student_data_df.groupby([\"school_name\"])[\"math_score\"].mean()\n",
     "#Average Reading Score of each school\n",
-    "info_by_school_df=student_data_df.groupby([\"school_name\"])\n",
-    "average_reading_by_school=info_by_school_df[\"reading_score\"].mean()\n",
-    "average_reading_by_school\n",
-    "\n",
-    "\n",
+    "average_reading_by_school=student_data_df.groupby([\"school_name\"])[\"reading_score\"].mean()\n",
+    "#Percent passed per school math\n",
+    "students_passed_math=school_data_complete_df[school_data_complete_df[\"math_score\"]>=70].groupby(\"school_name\").count()[\"student_name\"]\n",
+    "percent_passed_math=(students_passed_math/total_students)*100\n",
+    "#Percent passed per school reading\n",
+    "students_passed_reading=school_data_complete_df[school_data_complete_df[\"reading_score\"]>=70].groupby(\"school_name\").count()[\"student_name\"]\n",
+    "percent_passed_reading=(students_passed_reading/total_students)*100\n",
+    "#Percent overall\n",
+    "students_passed_overall=school_data_complete_df[(school_data_complete_df[\"math_score\"]>=70) & (school_data_complete_df[\"reading_score\"]>=70)].groupby(\"school_name\").count()[\"student_name\"]\n",
+    "percent_passed_overall=(students_passed_overall/total_students)*100\n",
     "#Create the data frame to show school summary\n",
     "school_summary_df=pd.DataFrame({\n",
-    "    \"School Names\":[district_school_names],\n",
-    "    \"School Types\":[school_type],\n",
-    "    \"Total Students\":[total_students],\n",
-    "    \"Total School Budget\":[school_budgets],\n",
-    "    \"Per Student Budget\":[per_student_budget],\n",
-    "    \"Average Math Score\":[average_math_by_school],\n",
-    "    \"Average Reading Score\":[average_reading_by_school],\n",
+    "    \"School Types\":school_type,\n",
+    "    \"Total Students\":total_students,\n",
+    "    \"Total School Budget\":per_school_budget,\n",
+    "    \"Per Student Budget\":per_student_budget,\n",
+    "    \"Average Math Score\":average_math_by_school,\n",
+    "    \"Average Reading Score\":average_reading_by_school,\n",
+    "    \"% Passing Math\":percent_passed_math,\n",
+    "    \"% Passing Reading\":percent_passed_reading,\n",
+    "    \"% Passing Overall\":percent_passed_overall\n",
     "    })\n",
-    "       \n",
-    "\n",
+    "#Define Columns for the Data Frame       \n",
+    "school_summary_df = school_summary_df[[\"School Types\",\"Total Students\",\"Total School Budget\",\"Per Student Budget\",\"Average Math Score\",\"Average Reading Score\",\"% Passing Math\",\"% Passing Reading\",\"% Passing Overall\"]]\n",
+    "#adjust formatting using mapping\n",
+    "school_summary_df[\"Total Students\"]=school_summary_df[\"Total Students\"].map(\"{:,}\".format)\n",
+    "school_summary_df[\"Total School Budget\"]=school_summary_df[\"Total School Budget\"].map(\"${:,.2f}\".format)\n",
+    "school_summary_df[\"Average Math Score\"]=school_summary_df[\"Average Math Score\"].map(\"{:.2f}\".format)\n",
+    "school_summary_df[\"Average Reading Score\"]=school_summary_df[\"Average Reading Score\"].map(\"{:.2f}\".format)\n",
+    "school_summary_df[\"% Passing Math\"]=school_summary_df[\"% Passing Math\"].map(\"{:.2f}%\".format)\n",
+    "school_summary_df[\"% Passing Reading\"]=school_summary_df[\"% Passing Reading\"].map(\"{:.2f}%\".format)\n",
+    "school_summary_df[\"% Passing Overall\"]=school_summary_df[\"% Passing Overall\"].map(\"{:.2f}%\".format)\n",
+    "#show dataframe\n",
     "school_summary_df\n",
     "    \n",
     "\n",
