--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -142,27 +142,126 @@
        "      <td>2917</td>\n",
        "      <td>1910635</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39165</th>\n",
+       "      <td>39165</td>\n",
+       "      <td>Donna Howard</td>\n",
+       "      <td>F</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>99</td>\n",
+       "      <td>90</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39166</th>\n",
+       "      <td>39166</td>\n",
+       "      <td>Dawn Bell</td>\n",
+       "      <td>F</td>\n",
+       "      <td>10th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>95</td>\n",
+       "      <td>70</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39167</th>\n",
+       "      <td>39167</td>\n",
+       "      <td>Rebecca Tanner</td>\n",
+       "      <td>F</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>73</td>\n",
+       "      <td>84</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39168</th>\n",
+       "      <td>39168</td>\n",
+       "      <td>Desiree Kidd</td>\n",
+       "      <td>F</td>\n",
+       "      <td>10th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>99</td>\n",
+       "      <td>90</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39169</th>\n",
+       "      <td>39169</td>\n",
+       "      <td>Carolyn Jackson</td>\n",
+       "      <td>F</td>\n",
+       "      <td>11th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>95</td>\n",
+       "      <td>75</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>39170 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Student ID       student_name gender grade        school_name  \\\n",
-       "0           0       Paul Bradley      M   9th  Huang High School   \n",
-       "1           1       Victor Smith      M  12th  Huang High School   \n",
-       "2           2    Kevin Rodriguez      M  12th  Huang High School   \n",
-       "3           3  Dr. Richard Scott      M  12th  Huang High School   \n",
-       "4           4         Bonnie Ray      F   9th  Huang High School   \n",
+       "       Student ID       student_name gender grade         school_name  \\\n",
+       "0               0       Paul Bradley      M   9th   Huang High School   \n",
+       "1               1       Victor Smith      M  12th   Huang High School   \n",
+       "2               2    Kevin Rodriguez      M  12th   Huang High School   \n",
+       "3               3  Dr. Richard Scott      M  12th   Huang High School   \n",
+       "4               4         Bonnie Ray      F   9th   Huang High School   \n",
+       "...           ...                ...    ...   ...                 ...   \n",
+       "39165       39165       Donna Howard      F  12th  Thomas High School   \n",
+       "39166       39166          Dawn Bell      F  10th  Thomas High School   \n",
+       "39167       39167     Rebecca Tanner      F   9th  Thomas High School   \n",
+       "39168       39168       Desiree Kidd      F  10th  Thomas High School   \n",
+       "39169       39169    Carolyn Jackson      F  11th  Thomas High School   \n",
        "\n",
-       "   reading_score  math_score  School ID      type  size   budget  \n",
-       "0             66          79          0  District  2917  1910635  \n",
-       "1             94          61          0  District  2917  1910635  \n",
-       "2             90          60          0  District  2917  1910635  \n",
-       "3             67          58          0  District  2917  1910635  \n",
-       "4             97          84          0  District  2917  1910635  "
+       "       reading_score  math_score  School ID      type  size   budget  \n",
+       "0                 66          79          0  District  2917  1910635  \n",
+       "1                 94          61          0  District  2917  1910635  \n",
+       "2                 90          60          0  District  2917  1910635  \n",
+       "3                 67          58          0  District  2917  1910635  \n",
+       "4                 97          84          0  District  2917  1910635  \n",
+       "...              ...         ...        ...       ...   ...      ...  \n",
+       "39165             99          90         14   Charter  1635  1043130  \n",
+       "39166             95          70         14   Charter  1635  1043130  \n",
+       "39167             73          84         14   Charter  1635  1043130  \n",
+       "39168             99          90         14   Charter  1635  1043130  \n",
+       "39169             95          75         14   Charter  1635  1043130  \n",
+       "\n",
+       "[39170 rows x 11 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +269,7 @@
    "source": [
     "#merge the data into a single dataframe\n",
     "school_data_complete_df = pd.merge(student_data_df,school_data_df, how=\"left\", on=[\"school_name\",\"school_name\"])\n",
-    "school_data_complete_df.head()"
+    "school_data_complete_df"
    ]
   },
   {
